--- a/demoIPOL/CMakeLists.txt
+++ b/demoIPOL/CMakeLists.txt
@@ -33,6 +33,7 @@ configure_file(${PROJECT_SOURCE_DIR}/demoIPOL/ConfigDemoIPOL.h.in
 SET(DEMO_IPOL_SRC
   pgm2freeman
   displayContours
+  extract3D
  )
 
 FOREACH(FILE ${DEMO_IPOL_SRC})
